--- a/lewis/ml_submit_ClassRegress_blending_detmodels.ipynb
+++ b/lewis/ml_submit_ClassRegress_blending_detmodels.ipynb
@@ -57,7 +57,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time elapsed: 32.3401 secs\n"
+      "Time elapsed: 11.8315 secs\n"
      ]
     }
    ],
@@ -129,60 +129,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
+    "#\n",
+    "seed = 12345\n",
+    "n_tree = 500\n",
+    "n_jobs = 7\n",
+    "#\n",
     "lpo = LogPlusOne()\n",
     "imp = Imputer(strategy='median', copy=False)  # Get a imputor with column-mean filling config\n",
     "ss = StandardScaler(copy=False, with_mean=True, with_std=True)\n",
     "def LogPlusOne_score(ground_truth, predictions):\n",
     "    return np.float64(np.mean(np.abs(ground_truth - (np.power(10, predictions) - 1))))\n",
-    "scorer = make_scorer(LogPlusOne_score, greater_is_better=False)  # define scoring metric"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
+    "scorer = make_scorer(LogPlusOne_score, greater_is_better=False)  # define scoring metric\n",
     "reg_sub = [None, None]\n",
     "for i in [0, 1]:\n",
-    "    base1 = Pipeline([('sel', LeaveTailK(K=4)), ('rf', RandomForestRegressor(n_estimators=500, max_features=0.2, max_depth=25, n_jobs=14))], copy = False)\n",
-    "    base2 = Pipeline([('sel', LeaveTailK(K=4)), ('xgb', xgb.sklearn.XGBRegressor(n_estimators=500, nthread=14))], copy = False)\n",
-    "    base3 = Pipeline([('sel', LeaveTailK(K=4)), ('ri', Ridge(alpha=2.0))], copy = False)\n",
-    "    base4 = Pipeline([('sel', LeaveTailK(K=4)), ('la', Lasso(alpha=0.01))], copy = False)\n",
+    "    base1 = Pipeline([('sel', LeaveTailK(K=4)), ('rf', RandomForestRegressor(n_estimators=n_tree, max_features=0.2, max_depth=25, n_jobs=n_jobs , random_state=seed))], copy = False)\n",
+    "    base2 = Pipeline([('sel', LeaveTailK(K=4)), ('xgb', xgb.sklearn.XGBRegressor(n_estimators=n_tree, nthread=n_jobs , seed=seed))], copy = False)\n",
+    "    base3 = Pipeline([('sel', LeaveTailK(K=4)), ('ri', Ridge(alpha=2.0, random_state=seed))], copy = False)\n",
+    "    base4 = Pipeline([('sel', LeaveTailK(K=4)), ('la', Lasso(alpha=0.01, random_state=seed))], copy = False)\n",
     "    base5 = Pipeline([('sel', SelectK2Last(K=4)), ('mp', DummyRegressor())], copy = False)\n",
     "    base6 = Pipeline([('sel', SelectK2Last(K=3)), ('kdp', DummyRegressor())], copy = False)\n",
     "    base7 = Pipeline([('sel', SelectK2Last(K=2)), ('kdp_zdr', DummyRegressor())], copy = False)\n",
     "    base8 = Pipeline([('sel', SelectK2Last(K=1)), ('ref_zdr', DummyRegressor())], copy = False)\n",
-    "    blender = Ridge(alpha=1.45)\n",
+    "    blender = Ridge(alpha=1.45, random_state=seed)\n",
     "    base_models=(base1, base2, base3, base4, base5, base6, base7, base8)\n",
-    "    reg_sub[i] = BlendedRegressor(base_models=base_models, blending_model=blender, blending_split=0.15, with_feature=True)\n",
-    "reg_sub = tuple(reg_sub)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "clf = xgb.sklearn.XGBClassifier(n_estimators=500, nthread=14)\n",
-    "reg = ClassifiedRegressor(labeling_thresh=np.log10(1+45) , classifier=clf, proba_thresh=0.6, regressors=reg_sub, verbose=1)\n",
+    "    reg_sub[i] = BlendedRegressor(base_models=base_models, blending_model=blender, blending_split=0.15, with_feature=True, random_state=seed)\n",
+    "reg_sub = tuple(reg_sub)\n",
+    "clf = xgb.sklearn.XGBClassifier(n_estimators=n_tree, nthread=n_jobs , seed=seed)\n",
+    "reg = ClassifiedRegressor(labeling_thresh=np.log10(1+45) , classifier=clf, proba_thresh=0, regressors=reg_sub, verbose=1)\n",
     "pip = Pipeline([('lpo',lpo), ('imp',imp), ('ss',ss), ('reg',reg)], copy=True)  # a Pipeline wrapper to chain'em up"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -199,12 +184,12 @@
       "text/plain": [
        "Pipeline(copy=True,\n",
        "     steps=[('lpo', LogPlusOne()), ('imp', Imputer(axis=0, copy=False, missing_values='NaN', strategy='median',\n",
-       "    verbose=0)), ('ss', StandardScaler(copy=False, with_mean=True, with_std=True)), ('reg', ClassifiedRegressor(classifier=XGBClassifier(base_score=0.5, colsample_bylevel=1, colsample_bytree=1,...solver='auto', tol=0.001),\n",
-       "         blending_split=0.15, with_feature=True)),\n",
+       "    verbose=0)), ('ss', StandardScaler(copy=False, with_mean=True, with_std=True)), ('reg', ClassifiedRegressor(classifier=XGBClassifier(base_score=0.5, colsample_bylevel=1, colsample_bytree=1,....001),\n",
+       "         blending_split=0.15, random_state=12345, with_feature=True)),\n",
        "          verbose=1))])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,35 +200,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/jingchu/anaconda2/lib/python2.7/site-packages/pandas/core/indexing.py:260: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "  self.obj[key] = _infer_fill_value(value)\n",
-      "/home/jingchu/anaconda2/lib/python2.7/site-packages/pandas/core/indexing.py:420: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "  self.obj[item] = s\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "(426094, 136)\n",
-      "Regressor prediction, total samples = 426094... regressor 0 predicts label False subtotal 425547... regressor 1 predicts label True subtotal 547...  \n"
+      "Regressor prediction, total samples = 426094... regressor 0 predicts label False subtotal 426094... regressor 1 predicts label True subtotal 0...  \n"
      ]
     }
    ],
@@ -276,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -285,7 +252,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "../data/result_20151203_235838.csv\n"
+      "../data/result_20151205_131837.csv\n"
      ]
     }
    ],
@@ -323,7 +290,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "version": "2.7.6"
   }
  },
  "nbformat": 4,
