--- a/lewis/ml_test_ClassRegress_blending_detmodels_sweep_1204.ipynb
+++ b/lewis/ml_test_ClassRegress_blending_detmodels_sweep_1204.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 45,
    "metadata": {
     "collapsed": false
    },
@@ -19,7 +19,7 @@
     "from sklearn.linear_model import LinearRegression, Ridge, Lasso\n",
     "from sklearn.tree import DecisionTreeRegressor\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
-    "from sklearn.cross_validation import cross_val_score, ShuffleSplit, train_test_split\n",
+    "from sklearn.cross_validation import cross_val_score, ShuffleSplit, train_test_split, KFold\n",
     "from sklearn.learning_curve import learning_curve, validation_curve\n",
     "from sklearn.metrics import make_scorer, confusion_matrix\n",
     "# xgboost\n",
@@ -37,9 +37,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 46,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 47,
    "metadata": {
     "collapsed": false
    },
@@ -59,7 +59,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time elapsed: 11.7638 secs\n"
+      "Time elapsed: 11.9227 secs\n"
      ]
     }
    ],
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 48,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 49,
    "metadata": {
     "collapsed": false
    },
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 50,
    "metadata": {
     "collapsed": false
    },
@@ -163,8 +163,9 @@
     "    reg_sub[i] = BlendedRegressor(base_models=base_models, blending_model=blender, blending_split=0.15, with_feature=True, random_state=seed)\n",
     "reg_sub = tuple(reg_sub)\n",
     "clf = xgb.sklearn.XGBClassifier(n_estimators=n_tree, nthread=n_jobs , seed=seed)\n",
-    "reg = ClassifiedRegressor(labeling_thresh=np.log10(1+45) , classifier=clf, proba_thresh=0, regressors=reg_sub, verbose=1)\n",
-    "pip = Pipeline([('lpo',lpo), ('imp',imp), ('ss',ss), ('reg',reg)], copy=True)  # a Pipeline wrapper to chain'em up"
+    "reg = ClassifiedRegressor(labeling_thresh=np.log10(1+45) , classifier=clf, proba_thresh=0.4, regressors=reg_sub, verbose=0)\n",
+    "pip = Pipeline([('lpo',lpo), ('imp',imp), ('ss',ss), ('reg',reg)], copy=True)  # a Pipeline wrapper to chain'em up\n",
+    "pip_sub = Pipeline([('lpo', lpo), ('imp', imp), ('ss', ss), ('clf', clf)], copy=True)"
    ]
   },
   {
@@ -176,70 +177,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[CV] no parameters to be set .........................................\n",
-      "Training classifier, total samples = 658400... label False subtotal 640131... label True subtotal 18269... fitting regressors, total samples = 658400... regressor 0 fits label False subtotal 640131... regressor 1 fits label True subtotal 18269...  \n",
-      "Regressor prediction, total samples = 73156... regressor 0 predicts label False subtotal 73156... regressor 1 predicts label True subtotal 0...  \n",
-      "[CV] .............. no parameters to be set, score=-22.188780 -21.0min\n",
-      "[CV] no parameters to be set .........................................\n",
-      "Training classifier, total samples = 658400... label False subtotal 640143... label True subtotal 18257... fitting regressors, total samples = 658400... regressor 0 fits label False subtotal 640143... regressor 1 fits label True subtotal 18257...  \n",
-      "Regressor prediction, total samples = 73156... regressor 0 predicts label False subtotal 73156... regressor 1 predicts label True subtotal 0...  \n",
-      "[CV] .............. no parameters to be set, score=-22.463131 -20.1min\n",
-      "[CV] no parameters to be set .........................................\n",
-      "Training classifier, total samples = 658400... label False subtotal 640250... label True subtotal 18150... fitting regressors, total samples = 658400... regressor 0 fits label False subtotal 640250... regressor 1 fits label True subtotal 18150...  \n",
-      "Regressor prediction, total samples = 73156... regressor 0 predicts label False subtotal 73156... regressor 1 predicts label True subtotal 0...  \n",
-      "[CV] .............. no parameters to be set, score=-23.337152 -20.0min\n",
-      "[CV] no parameters to be set .........................................\n",
-      "Training classifier, total samples = 658400... label False subtotal 640278... label True subtotal 18122... fitting regressors, total samples = 658400... regressor 0 fits label False subtotal 640278... regressor 1 fits label True subtotal 18122...  \n",
-      "Regressor prediction, total samples = 73156... regressor 0 predicts label False subtotal 73156... regressor 1 predicts label True subtotal 0...  \n",
-      "[CV] .............. no parameters to be set, score=-24.860735 -20.1min\n",
-      "[CV] no parameters to be set .........................................\n",
-      "Training classifier, total samples = 658400... label False subtotal 640227... label True subtotal 18173... fitting regressors, total samples = 658400... regressor 0 fits label False subtotal 640227... regressor 1 fits label True subtotal 18173...  \n",
-      "Regressor prediction, total samples = 73156... regressor 0 predicts label False subtotal 73156... regressor 1 predicts label True subtotal 0...  \n",
-      "[CV] .............. no parameters to be set, score=-23.701079 -19.8min\n",
-      "[CV] no parameters to be set .........................................\n",
-      "Training classifier, total samples = 658400... label False subtotal 640678... label True subtotal 17722... fitting regressors, total samples = 658400... regressor 0 fits label False subtotal 640678... regressor 1 fits label True subtotal 17722...  \n",
-      "Regressor prediction, total samples = 73156... regressor 0 predicts label False subtotal 73156... regressor 1 predicts label True subtotal 0...  \n",
-      "[CV] .............. no parameters to be set, score=-23.856624 -20.0min\n",
-      "[CV] no parameters to be set .........................................\n",
-      "Training classifier, total samples = 658401... label False subtotal 640001... label True subtotal 18400... fitting regressors, total samples = 658401... regressor 0 fits label False subtotal 640001... regressor 1 fits label True subtotal 18400...  \n",
-      "Regressor prediction, total samples = 73155... regressor 0 predicts label False subtotal 73155... regressor 1 predicts label True subtotal 0...  \n",
-      "[CV] .............. no parameters to be set, score=-19.846963 -19.8min\n",
-      "[CV] no parameters to be set .........................................\n",
-      "Training classifier, total samples = 658401... label False subtotal 640244... label True subtotal 18157... fitting regressors, total samples = 658401... regressor 0 fits label False subtotal 640244... regressor 1 fits label True subtotal 18157...  \n",
-      "Regressor prediction, total samples = 73155... regressor 0 predicts label False subtotal 73155... regressor 1 predicts label True subtotal 0...  \n",
-      "[CV] .............. no parameters to be set, score=-25.538065 -19.9min\n",
-      "[CV] no parameters to be set .........................................\n",
-      "Training classifier, total samples = 658401... label False subtotal 640315... label True subtotal 18086... fitting regressors, total samples = 658401... regressor 0 fits label False subtotal 640315... regressor 1 fits label True subtotal 18086...  \n",
-      "Regressor prediction, total samples = 73155... regressor 0 predicts label False subtotal 73155... regressor 1 predicts label True subtotal 0...  \n",
-      "[CV] .............. no parameters to be set, score=-23.602911 -19.9min\n",
-      "[CV] no parameters to be set .........................................\n",
-      "Training classifier, total samples = 658401... label False subtotal 640342... label True subtotal 18059... fitting regressors, total samples = 658401... regressor 0 fits label False subtotal 640342... regressor 1 fits label True subtotal 18059...  \n",
-      "Regressor prediction, total samples = 73155... regressor 0 predicts label False subtotal 73155... regressor 1 predicts label True subtotal 0...  \n",
-      "[CV] .............. no parameters to be set, score=-21.402027 -19.8min\n",
-      "-23.0797466517 1.58064765705\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Parallel(n_jobs=1)]: Done  10 out of  10 | elapsed: 200.5min finished\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# label at 45, class xgb 500, proba_thresh=0\n",
-    "scores = cross_val_score(estimator=pip, X=X, y=y, scoring=scorer, cv=10, n_jobs=1, verbose=3)\n",
-    "print np.mean(scores), np.std(scores)"
+    "kf = KFold(n=y.shape[0], n_folds=10, random_state=seed)\n",
+    "param_range = np.arange(0, 1.1, 0.05)\n",
+    "score = pd.DataFrame(np.zeros([10, len(param_range)]))\n",
+    "score = pd.DataFrame(score, index=range(0,10), columns=param_range)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "for ifold, (train_index, val_index) in enumerate(kf):\n",
+    "    print \"Fold {} starts...\".format(ifold)\n",
+    "    t = time.time()\n",
+    "    X_trn, X_val = X.iloc[train_index, :], X.iloc[val_index, :]\n",
+    "    y_trn, y_val = y.iloc[train_index], y.iloc[val_index]\n",
+    "    pip.fit(X_trn, y_trn)\n",
+    "    for iparam, th in enumerate(param_range):\n",
+    "        reg.proba_thresh = th        \n",
+    "        y_label_val_predict_prob = pip_sub.predict_proba(X_val)[:, 0]\n",
+    "        c = confusion_matrix(y_val>45, y_label_val_predict_prob<th)\n",
+    "        TP, FN, TN, FP = c[1,1], c[1,0], c[0,0], c[0,1]\n",
+    "        score.iloc[ifold, iparam] = LogPlusOne_score(y_val, pip.predict(X_val))\n",
+    "        print \"th {} (TP {}, FN {}, TN {}, FP {}) score {}\".format(th, TP, FN, TN, FP, score.iloc[ifold, iparam])\n",
+    "    print \".....................................used {} mins\".format((time.time()-t)/60.0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Write file\n",
+    "datetime_str = time.strftime('%Y%m%d_%H%M%S')\n",
+    "score.to_csv('../data/score_'+datetime_str+'.csv')\n",
+    "print '../data/score_'+datetime_str+'.csv'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "score = pd.read_csv('../data/score_20151205_134448.csv', index_col=0)"
    ]
   }
  ],
