--- a/lewis/ml_test_ClassRegress_blending_detmodels_1204_2.ipynb
+++ b/lewis/ml_test_ClassRegress_blending_detmodels_1204_2.ipynb
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -186,7 +186,53 @@
      "output_type": "stream",
      "text": [
       "[CV] no parameters to be set .........................................\n",
-      "Training classifier, total samples = 658400... label False subtotal 640131... label True subtotal 18269... "
+      "Training classifier, total samples = 658400... label False subtotal 640131... label True subtotal 18269... fitting regressors, total samples = 658400... regressor 0 fits label False subtotal 640131... regressor 1 fits label True subtotal 18269...  \n",
+      "Regressor prediction, total samples = 73156... regressor 0 predicts label False subtotal 73125... regressor 1 predicts label True subtotal 31...  \n",
+      "[CV] .............. no parameters to be set, score=-22.195937 -25.3min\n",
+      "[CV] no parameters to be set .........................................\n",
+      "Training classifier, total samples = 658400... label False subtotal 640143... label True subtotal 18257... fitting regressors, total samples = 658400... regressor 0 fits label False subtotal 640143... regressor 1 fits label True subtotal 18257...  \n",
+      "Regressor prediction, total samples = 73156... regressor 0 predicts label False subtotal 73140... regressor 1 predicts label True subtotal 16...  \n",
+      "[CV] .............. no parameters to be set, score=-22.484114 -25.3min\n",
+      "[CV] no parameters to be set .........................................\n",
+      "Training classifier, total samples = 658400... label False subtotal 640250... label True subtotal 18150... fitting regressors, total samples = 658400... regressor 0 fits label False subtotal 640250... regressor 1 fits label True subtotal 18150...  \n",
+      "Regressor prediction, total samples = 73156... regressor 0 predicts label False subtotal 73144... regressor 1 predicts label True subtotal 12...  \n",
+      "[CV] .............. no parameters to be set, score=-23.316142 -25.1min\n",
+      "[CV] no parameters to be set .........................................\n",
+      "Training classifier, total samples = 658400... label False subtotal 640278... label True subtotal 18122... fitting regressors, total samples = 658400... regressor 0 fits label False subtotal 640278... regressor 1 fits label True subtotal 18122...  \n",
+      "Regressor prediction, total samples = 73156... regressor 0 predicts label False subtotal 73132... regressor 1 predicts label True subtotal 24...  \n",
+      "[CV] .............. no parameters to be set, score=-24.844904 -25.0min\n",
+      "[CV] no parameters to be set .........................................\n",
+      "Training classifier, total samples = 658400... label False subtotal 640227... label True subtotal 18173... fitting regressors, total samples = 658400... regressor 0 fits label False subtotal 640227... regressor 1 fits label True subtotal 18173...  \n",
+      "Regressor prediction, total samples = 73156... regressor 0 predicts label False subtotal 73126... regressor 1 predicts label True subtotal 30...  \n",
+      "[CV] .............. no parameters to be set, score=-23.773047 -25.2min\n",
+      "[CV] no parameters to be set .........................................\n",
+      "Training classifier, total samples = 658400... label False subtotal 640678... label True subtotal 17722... fitting regressors, total samples = 658400... regressor 0 fits label False subtotal 640678... regressor 1 fits label True subtotal 17722...  \n",
+      "Regressor prediction, total samples = 73156... regressor 0 predicts label False subtotal 73130... regressor 1 predicts label True subtotal 26...  \n",
+      "[CV] .............. no parameters to be set, score=-23.798228 -25.1min\n",
+      "[CV] no parameters to be set .........................................\n",
+      "Training classifier, total samples = 658401... label False subtotal 640001... label True subtotal 18400... fitting regressors, total samples = 658401... regressor 0 fits label False subtotal 640001... regressor 1 fits label True subtotal 18400...  \n",
+      "Regressor prediction, total samples = 73155... regressor 0 predicts label False subtotal 73140... regressor 1 predicts label True subtotal 15...  \n",
+      "[CV] .............. no parameters to be set, score=-19.773004 -25.1min\n",
+      "[CV] no parameters to be set .........................................\n",
+      "Training classifier, total samples = 658401... label False subtotal 640244... label True subtotal 18157... fitting regressors, total samples = 658401... regressor 0 fits label False subtotal 640244... regressor 1 fits label True subtotal 18157...  \n",
+      "Regressor prediction, total samples = 73155... regressor 0 predicts label False subtotal 73104... regressor 1 predicts label True subtotal 51...  \n",
+      "[CV] .............. no parameters to be set, score=-25.381081 -25.2min\n",
+      "[CV] no parameters to be set .........................................\n",
+      "Training classifier, total samples = 658401... label False subtotal 640315... label True subtotal 18086... fitting regressors, total samples = 658401... regressor 0 fits label False subtotal 640315... regressor 1 fits label True subtotal 18086...  \n",
+      "Regressor prediction, total samples = 73155... regressor 0 predicts label False subtotal 73133... regressor 1 predicts label True subtotal 22...  \n",
+      "[CV] .............. no parameters to be set, score=-23.378954 -25.2min\n",
+      "[CV] no parameters to be set .........................................\n",
+      "Training classifier, total samples = 658401... label False subtotal 640342... label True subtotal 18059... fitting regressors, total samples = 658401... regressor 0 fits label False subtotal 640342... regressor 1 fits label True subtotal 18059...  \n",
+      "Regressor prediction, total samples = 73155... regressor 0 predicts label False subtotal 73139... regressor 1 predicts label True subtotal 16...  \n",
+      "[CV] .............. no parameters to be set, score=-21.401761 -25.2min\n",
+      "-23.0347172142 1.56269030163\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=1)]: Done  10 out of  10 | elapsed: 251.6min finished\n"
      ]
     }
    ],
