--- a/lewis/ml_test_feature_1204-Copy1.ipynb
+++ b/lewis/ml_test_feature_1204-Copy1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -29,7 +29,6 @@
     "from anrg.pipeline import Pipeline, SelectTailK, LeaveTailK, SelectK2Last, DummyRegressor\n",
     "from anrg.blending import BlendedRegressor\n",
     "from anrg.cleaning import TargetThresholdFilter, LogPlusOne\n",
-    "from anrg.classified_regression import ClassifiedRegressor\n",
     "##### setting #######\n",
     "pd.set_option('display.max_columns', 500)  # force pandas to display all columns for better visual inspection\n",
     "%matplotlib inline"
@@ -37,18 +36,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "trn = pd.read_csv('../data/train.csv')"
+    "trn = pd.read_csv('../data/train.csv')\n",
+    "# trn = pd.read_csv('../data/train_10.csv', index_col=0)  # column #0 in our file is DataFrame index\n",
+    "# trn = pd.read_csv('../data/train_1.csv', index_col=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -57,7 +58,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time elapsed: 11.7967 secs\n"
+      "Time elapsed: 11.7440 secs\n"
      ]
     }
    ],
@@ -77,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -105,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -129,16 +130,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "#\n",
     "seed = 12345\n",
     "n_tree = 500\n",
-    "n_jobs = 7\n",
+    "n_jobs = 7  # MAX: 15 for neptune, 7 for beijing server\n",
     "#\n",
     "lpo = LogPlusOne()\n",
     "imp = Imputer(strategy='median', copy=False)  # Get a imputor with column-mean filling config\n",
@@ -146,28 +147,78 @@
     "def LogPlusOne_score(ground_truth, predictions):\n",
     "    return np.float64(np.mean(np.abs(ground_truth - (np.power(10, predictions) - 1))))\n",
     "scorer = make_scorer(LogPlusOne_score, greater_is_better=False)  # define scoring metric\n",
-    "reg_sub = [None, None]\n",
-    "for i in [0, 1]:\n",
-    "    base1 = Pipeline([('sel', LeaveTailK(K=4)), ('rf', RandomForestRegressor(n_estimators=n_tree, max_features=0.2, max_depth=25, n_jobs=n_jobs , random_state=seed))], copy = False)\n",
-    "    base2 = Pipeline([('sel', LeaveTailK(K=4)), ('xgb', xgb.sklearn.XGBRegressor(n_estimators=n_tree, nthread=n_jobs , seed=seed))], copy = False)\n",
-    "    base3 = Pipeline([('sel', LeaveTailK(K=4)), ('ri', Ridge(alpha=2.0, random_state=seed))], copy = False)\n",
-    "    base4 = Pipeline([('sel', LeaveTailK(K=4)), ('la', Lasso(alpha=0.01, random_state=seed))], copy = False)\n",
-    "    base5 = Pipeline([('sel', SelectK2Last(K=4)), ('mp', DummyRegressor())], copy = False)\n",
-    "    base6 = Pipeline([('sel', SelectK2Last(K=3)), ('kdp', DummyRegressor())], copy = False)\n",
-    "    base7 = Pipeline([('sel', SelectK2Last(K=2)), ('kdp_zdr', DummyRegressor())], copy = False)\n",
-    "    base8 = Pipeline([('sel', SelectK2Last(K=1)), ('ref_zdr', DummyRegressor())], copy = False)\n",
-    "    blender = Ridge(alpha=1.45, random_state=seed)\n",
-    "    base_models=(base1, base2, base3, base4, base5, base6, base7, base8)\n",
-    "    reg_sub[i] = BlendedRegressor(base_models=base_models, blending_model=blender, blending_split=0.15, with_feature=True, random_state=seed)\n",
-    "reg_sub = tuple(reg_sub)\n",
-    "clf = xgb.sklearn.XGBClassifier(n_estimators=n_tree, nthread=n_jobs , seed=seed)\n",
-    "reg = ClassifiedRegressor(labeling_thresh=np.log10(1+45) , classifier=clf, proba_thresh=0.4, regressors=reg_sub, verbose=1)\n",
+    "base1 = Pipeline([('sel', LeaveTailK(K=4)), ('rf', RandomForestRegressor(n_estimators=n_tree, max_features=0.2, max_depth=25, n_jobs=n_jobs , random_state=seed))], copy = False)\n",
+    "base2 = Pipeline([('sel', LeaveTailK(K=4)), ('xgb', xgb.sklearn.XGBRegressor(n_estimators=n_tree, nthread=n_jobs , seed=seed))], copy = False)\n",
+    "base3 = Pipeline([('sel', LeaveTailK(K=4)), ('ri', Ridge(alpha=2.0, random_state=seed))], copy = False)\n",
+    "base4 = Pipeline([('sel', LeaveTailK(K=4)), ('la', Lasso(alpha=0.01, random_state=seed))], copy = False)\n",
+    "base5 = Pipeline([('sel', SelectK2Last(K=4)), ('mp', DummyRegressor())], copy = False)\n",
+    "base6 = Pipeline([('sel', SelectK2Last(K=3)), ('kdp', DummyRegressor())], copy = False)\n",
+    "base7 = Pipeline([('sel', SelectK2Last(K=2)), ('kdp_zdr', DummyRegressor())], copy = False)\n",
+    "base8 = Pipeline([('sel', SelectK2Last(K=1)), ('ref_zdr', DummyRegressor())], copy = False)\n",
+    "blender = xgb.sklearn.XGBRegressor(n_estimators=n_tree, nthread=n_jobs , seed=seed)\n",
+    "base_models=(base1, base2, base3, base4, base5, base6, base7, base8)\n",
+    "reg = BlendedRegressor(base_models=base_models, blending_model=blender, blending_split=0.15, with_feature=True, random_state=seed)\n",
     "pip = Pipeline([('lpo',lpo), ('imp',imp), ('ss',ss), ('reg',reg)], copy=True)  # a Pipeline wrapper to chain'em up"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# CV"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[CV] no parameters to be set .........................................\n",
+      "[CV] .............. no parameters to be set, score=-22.087815 -17.9min\n",
+      "[CV] no parameters to be set .........................................\n",
+      "[CV] .............. no parameters to be set, score=-22.551790 -18.1min\n",
+      "[CV] no parameters to be set .........................................\n",
+      "[CV] .............. no parameters to be set, score=-23.464230 -18.3min\n",
+      "[CV] no parameters to be set .........................................\n",
+      "[CV] .............. no parameters to be set, score=-25.055976 -18.2min\n",
+      "[CV] no parameters to be set .........................................\n",
+      "[CV] .............. no parameters to be set, score=-23.687907 -18.0min\n",
+      "[CV] no parameters to be set .........................................\n",
+      "[CV] .............. no parameters to be set, score=-23.951231 -18.0min\n",
+      "[CV] no parameters to be set .........................................\n",
+      "[CV] .............. no parameters to be set, score=-19.618069 -17.9min\n",
+      "[CV] no parameters to be set .........................................\n",
+      "[CV] .............. no parameters to be set, score=-25.351903 -17.9min\n",
+      "[CV] no parameters to be set .........................................\n",
+      "[CV] .............. no parameters to be set, score=-23.560057 -17.8min\n",
+      "[CV] no parameters to be set .........................................\n",
+      "[CV] .............. no parameters to be set, score=-21.496993 -17.9min\n",
+      "-23.0825971257 1.62255824738\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=1)]: Done  10 out of  10 | elapsed: 180.2min finished\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Parameters: \n",
+    "scores = cross_val_score(estimator=pip, X=X, y=y, scoring=scorer, cv=10, n_jobs=1, verbose=3)\n",
+    "print np.mean(scores), np.std(scores)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -176,20 +227,69 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training classifier, total samples = 731556... label False subtotal 711401... label True subtotal 20155... fitting regressors, total samples = 731556... regressor 0 fits label False subtotal 711401... regressor 1 fits label True subtotal 20155...  \n"
+      "[CV] no parameters to be set .........................................\n",
+      "[CV] .............. no parameters to be set, score=-21.903682 -18.6min\n",
+      "[CV] no parameters to be set .........................................\n",
+      "[CV] .............. no parameters to be set, score=-22.234587 -18.7min\n",
+      "[CV] no parameters to be set .........................................\n",
+      "[CV] .............. no parameters to be set, score=-23.211998 -18.6min\n",
+      "[CV] no parameters to be set .........................................\n",
+      "[CV] .............. no parameters to be set, score=-24.819357 -18.6min\n",
+      "[CV] no parameters to be set .........................................\n",
+      "[CV] .............. no parameters to be set, score=-23.605030 -18.5min\n",
+      "[CV] no parameters to be set .........................................\n",
+      "[CV] .............. no parameters to be set, score=-23.694268 -18.5min\n",
+      "[CV] no parameters to be set .........................................\n",
+      "[CV] .............. no parameters to be set, score=-19.469636 -18.5min\n",
+      "[CV] no parameters to be set .........................................\n",
+      "[CV] .............. no parameters to be set, score=-25.258720 -18.4min\n",
+      "[CV] no parameters to be set .........................................\n",
+      "[CV] .............. no parameters to be set, score=-23.347362 -18.6min\n",
+      "[CV] no parameters to be set .........................................\n",
+      "[CV] .............. no parameters to be set, score=-21.395725 -18.4min\n",
+      "-22.894036554 1.61673119617\n"
      ]
     },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=1)]: Done  10 out of  10 | elapsed: 185.3min finished\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Parameters: \n",
+    "scores = cross_val_score(estimator=pip, X=X, y=y, scoring=scorer, cv=10, n_jobs=1, verbose=3)\n",
+    "print np.mean(scores), np.std(scores)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Submission"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
     {
      "data": {
       "text/plain": [
        "Pipeline(copy=True,\n",
        "     steps=[('lpo', LogPlusOne()), ('imp', Imputer(axis=0, copy=False, missing_values='NaN', strategy='median',\n",
-       "    verbose=0)), ('ss', StandardScaler(copy=False, with_mean=True, with_std=True)), ('reg', ClassifiedRegressor(classifier=XGBClassifier(base_score=0.5, colsample_bylevel=1, colsample_bytree=1,....001),\n",
-       "         blending_split=0.15, random_state=12345, with_feature=True)),\n",
-       "          verbose=1))])"
+       "    verbose=0)), ('ss', StandardScaler(copy=False, with_mean=True, with_std=True)), ('reg', BlendedRegressor(base_models=(Pipeline(copy=False,\n",
+       "     steps=[('sel', LeaveTailK(K=4)), ('rf', Rando...\n",
+       "           splitter='best'),\n",
+       "         blending_split=0.15, random_state=12345, with_feature=True))])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,35 +300,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/local/lib/python2.7/dist-packages/pandas/core/indexing.py:260: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "  self.obj[key] = _infer_fill_value(value)\n",
-      "/usr/local/lib/python2.7/dist-packages/pandas/core/indexing.py:420: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "  self.obj[item] = s\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(426094, 136)\n",
-      "Regressor prediction, total samples = 426094... regressor 0 predicts label False subtotal 425903... regressor 1 predicts label True subtotal 191...  \n"
+      "(426094, 136)\n"
      ]
     }
    ],
@@ -261,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -270,7 +351,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "../data/result_20151205_224826.csv\n"
+      "../data/result_20151207_132821.csv\n"
      ]
     }
    ],
